# PyPO

./: .bumpversion.toml  .coveragerc  .gitignore  Build.py  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DevUtils.py  Doxyfile  GUIWidgetTester.py  GenerateDocs.py  GuiApp.py  LICENSE  MANIFEST.in  README  README.md  SystemInterface.py  WO.py  anyl_taper_vs_freq.py  ex_ASTE.py  ex_ASTE_PO.py  ex_ASTE_RT.py  ex_DRO_PO.py  ex_DRO_RT.py  freq_range.npy  log.txt  new_POPPy_test.py  plot_pointings.py  pointing_mask.py  propagateWO.py  requirements.txt  run_example.py  setup.cfg  setup.py  test.py  test_vertex.py  testbeams.py
demos/: Demo1.ipynb  Demo2.ipynb  Demo3.ipynb  Demo4.ipynb  Demo5.ipynb  Demo6.ipynb  Demo7.ipynb  Untitled.ipynb  ValidateSurfErr-Copy1.ipynb  ValidateSurfErr.ipynb  _Demo7.ipynb
docs/: Accordion_8py.html  BeamInit_8h.html  BeamInit_8h_source.html  BindBeam_8py.html  BindCPU_8py.html  BindGPU_8py.html  BindRefl_8py.html  BindTransf_8py.html  BindUtils_8py.html  Build_8py.html  CNAME  Checks_8py.html  Config_8py.html  CustomLogger_8py.html  Debug_8h.html  Debug_8h_source.html  Dialogs_8py.html  Efficiencies_8py.html  ElementWidget_8py.html  Enums_8py.html  FitGauss_8py.html  GUtils_8h.html  GUtils_8h_source.html  InputDescription_8py.html  InterfaceBeam_8cpp.html  InterfaceBeam_8h.html  InterfaceBeam_8h_source.html  InterfaceCPU_8cpp.html  InterfaceCPU_8h.html  InterfaceCPU_8h_source.html  InterfaceCUDA_8h.html  InterfaceCUDA_8h_source.html  InterfaceReflector_8cpp.html  InterfaceReflector_8h.html  InterfaceReflector_8h_source.html  KernelsRTf_8cu.html  Kernelsf_8cu.html  MainWindow_8py.html  MatTransform_8py.html  MatUtils_8py.html  (+580 more)
doxy/: BasicTut1.dox  BasicTut2.dox  BasicTut3.dox  BasicTut4.dox  BasicTut5.dox  BasicTut6.dox  CommonIssues.dox  Demo.dox  Documentation.dox  Doxyfile  DoxygenLayout.xml  Explanations.dox  FieldCalcDerivation_backward.ipynb  FieldCalcDerivation_forward.ipynb  General.md  InstDev.dox  PhysicalOpticsBasics.dox  PubAPIArgOpts.dox  PubAPICommon.dox  PubAPIFrameMeths.dox  PubAPIHybrid.dox  PubAPIInternalDicts.dox  PubAPIPOMeths.dox  PubAPIReflMeths.dox  PubAPISystemPaths.dox  PubAPITemplates.dox  PubAPITypes.dox  PubAPIVisualisation.dox  Tutorial.dox  Tutorial.md  gaussian_beams.ipynb  mainpage.dox
examples/: BuildWO.py  (+15 more)
src/: CMakeLists.txt  SetupGTest.py  mainpage.dox  makefile.beam  makefile.cpu  makefile.gpu  makefile.refl
src/C++/: makefile  makefile.beam  makefile.cpu  makefile.dcpu  makefile.dgpu  makefile.fcpu  makefile.fgpu  makefile.gpu  makefile.refl
src/C++/double/: DataHandler.cpp  DataHandler.h  GDataHandler.cu  GDataHandler.h  GPhysBeam.cu  GUtils.h  PhysBeam.cpp  Propagation.cpp  Propagation.h  PropagationScalar.cpp
src/C++/float/: DataHandlerf.cpp  DataHandlerf.h  GDataHandlerf.cu  GDataHandlerf.h  GPhysBeamf.cu  GUtilsf.h  PhysBeamScalarf.cpp  PhysBeamf.cpp  PropagationScalarf.cpp  PropagationScalarf.h  Propagationf.cpp  Propagationf.h  Utilsf.h
src/C++/src/: BeamInit.h  CompOverload.h  DataHandler.cpp  DataHandler.h  GDataHandler.cu  GDataHandler.h  GPhysBeam.cu  GUtils.h  InterfaceBeam.cpp  InterfaceReflector.cpp  InterfaceReflector.h  Interface_CPU.cpp  Kernels.cu  KernelsRTf.cu  Kernelsf.cu  PhysBeam.cpp  PhysBeamScalar.cpp  Propagation.cpp  Propagation.h  PropagationScalar.cpp  PropagationScalar.h  RTRefls.h  RayTrace.h  Structs.h  Utils.h
src/CPU/: InterfaceCPU.cpp  InterfaceCPU.h  Propagation.h  RayTrace.h
src/CUDA/: CMakeLists.txt  Debug.h  InterfaceCUDA.h  KernelsRTf.cu  Kernelsf.cu
src/GUI/: Acccordion.py  Accordion.py  Console.py  Dialogs.py  ElementOptionsLayout.py  ElementWidget.py  ElementsColumn.py  MPLCanvas.py  MainScreen.py  MainWidget.py  MainWindow.py  ParabolaForm.py  PlotScreen.py  README.md  SubprocessManager.py  SystemTab.py  SystemsColumn.py  TransformationWidget.py  Waiter.py  WorkSpace.py  Worker.py  Workspace.py  __init__.py  parabolaformInWidgets.py  references.txt  runSubprocess.py  selfClosingDialog.py  selfClosingDialog_HoverableBtn.py  style.css  utils.py
src/GUI/ParameterForms/: BaseForm.py  ElementConfiguration.py  ElementSelectionWidget.py  HyperbolaForm.py  InputDescription.py  InputDiscription.py  ParabolaForm.py  ParameterWidget.py  SimpleInputWidget.py  formData.py  formDataObjects.py  formGenerator.py  formGeneratorObjects.py  inputWidgetInterfaces.py  simpleInputWidgets.py  variableInputWidget.py  variableInputWidgetcopy.py
src/GUI/ParameterForms/simpleInputWidgets/: inputWidget.py  simpleInputWidgets.py
src/GUI/ViewModels/: SystemElementElementVM.py
src/GUI/Workspace/: Workspace.py
src/GUI/archive/: ElementOptionsLayout.py  ElementWidget_Systems.py  ElementsColumn.py  HyperbolaForm.py  ParabolaForm.py  PlotTabWidget.py  SystemTab.py  SystemsColumn.py  TransformationWidget.py  Worker.py  fromDesigner.ui  selfClosingDialog_HoverableBtn.py
src/POPPy/: Aperture.py  Beams.py  BenchmarkGPU.py  BindBeam.py  BindCPU.py  BindGPU.py  BindRefl.py  BindUtils.py  Camera.py  Checks.py  CoordConvert.py  Copy.py  Efficiencies.py  FitGauss.py  Fitting.py  FourierOptics.py  MatRotate.py  MatTransform.py  POPPyTypes.py  PhysOptics.py  PlotConfig.py  Plotter.py  RayTrace.py  RayTrace.py.bak  Reflectors.py  Structs.py  System.py  Templates.py
src/PyPO/: BindBeam.py  BindCPU.py  BindGPU.py  BindRefl.py  BindTransf.py  BindUtils.py  Checks.py  Colormaps.py  Config.py  CustomLogger.py  Efficiencies.py  Enums.py  FitGauss.py  MatTransform.py  MatUtils.py  Optimise.py  PlotConfig.py  Plotter.py  PyPOTypes.py  Sellmeier.py  Structs.py  System.py  Templates.py  Threadmgr.py  WorldParam.py
src/Python/: Aperture.py  Beams.py  Camera.py  Colormaps.py  Efficiencies.py  FourierOptics.py  MatRotate.py  PhysOptics.py  Plotter.py  RayTrace.py  Reflectors.py  System.py
src/common/: BeamInit.h  InterfaceBeam.cpp  InterfaceBeam.h  InterfaceReflector.cpp  InterfaceReflector.h  Transform.cpp  Transform.h
src/doxy/: README.md  mainpage.dox
src/include/: GUtils.h  MemUtils.cpp  MemUtils.h  RTRefls.h  Random.h  Structs.h  Utils.h
src/include/tests/: test_GUtils.cpp  test_Utils.cpp
(+494 files in other folders)
