[metadata]
name = POPPy_test
version = 0.0.1
author = Arend Moerman
author_email = arendmoerman@gmail.com
description = Physical OPtics for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arend95/POPPy
project_urls =
    Bug Tracker = https://github.com/arend95/POPPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src 
